# OdinEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
.Shaders/: Quad.frag  Quad.vert  color_triangle.frag  color_triangle.vert  compiler.sh  debug.frag  debug.vert  default_lit.frag  depthpass.frag  depthpass.vert  indirect_cull.comp  mesh_pbr_lit.frag  mesh_triangle.vert  offscreen.frag  offscreen.vert  skybox_frag.frag  skybox_vert.vert  textured_lit.frag  triangle.frag  triangle.vert  triangleShader.frag  triangleShader.vert
.cache/clangd/index/: BaseTypes.h.E63BC31F61891F80.idx  CodeGen.cpp.3E13A46E11343F89.idx  Common.h.2CE9AB035226B29F.idx  Constant.cpp.E361FA6F55730D35.idx  ConstantUnion.h.C8A00B2DAF351C03.idx  DirStackFileIncluder.h.F5EF6F3418A669A7.idx  ExampleTest.cpp.15B93A29F296CD01.idx  GLSL.ext.AMD.h.DA9F0908068B85D2.idx  GLSL.ext.EXT.h.55D3110499F38A49.idx  GLSL.ext.KHR.h.8D5960F40B02F935.idx  GLSL.ext.NV.h.990FBDBE6AF871A3.idx  GLSL.std.450.h.7A71C4CCA0343DFC.idx  GlslangToSpv.cpp.5214890D09D7FB91.idx  GlslangToSpv.h.5DA99A8CEE309467.idx  InReadableOrder.cpp.53B7774C2F655587.idx  InfoSink.cpp.4CCE2A627E41A678.idx  InfoSink.h.98313AE791CD3484.idx  Initialize.cpp.B6C2FE466616F25E.idx  Initialize.h.F24CF609AB4ADA61.idx  InitializeDll.cpp.B24D36E3252CEEAC.idx  InitializeDll.h.9537E3DC3FD0B9FB.idx  InitializeGlobals.h.D45FD4BE43E2ABB5.idx  IntermTraverse.cpp.8CD487909CAB85B2.idx  Intermediate.cpp.BAC794DD1244E121.idx  Link.cpp.F952104241A9BE75.idx  LiveTraverser.h.0386DF0A8787BB02.idx  Logger.cpp.30C7C81324482B4F.idx  Logger.h.FE56753BF6467F4C.idx  NonSemanticDebugPrintf.h.E604FCCFB4C5A842.idx  ParseContextBase.cpp.7CB5B626727F3289.idx  ParseHelper.cpp.37ADB38071DE5EF4.idx  ParseHelper.h.CB30BF8AD914EB42.idx  PoolAlloc.cpp.4BE3EC2942F11BB3.idx  PoolAlloc.h.98682D5CFB639637.idx  Pp.cpp.D4E7EF18F24E0A68.idx  PpAtom.cpp.9B00E03294181B5D.idx  PpContext.cpp.295B74FE4BA92998.idx  PpContext.h.1BD0A6162C660825.idx  PpScanner.cpp.DAD68A3CC1A2E961.idx  PpTokens.cpp.90D4253E2FA04D42.idx  (+494 more)
.clangd/index/: BaseTypes.h.071F8E0CA432C715.idx  CodeGen.cpp.ADA1C2E5437EE281.idx  Common.h.7D1475AC0B0DD54A.idx  Constant.cpp.E4D92163A0A88A5C.idx  ConstantUnion.h.2DA1CDBF9EEE4DE4.idx  DirStackFileIncluder.h.3FF5BE83A5537A41.idx  ExampleTest.cpp.40A3C017A09DEEEA.idx  GLSL.ext.AMD.h.157EF11D6FF6CB0C.idx  GLSL.ext.EXT.h.FA59FC4864F9C25F.idx  GLSL.ext.KHR.h.DC195A99B4D9DADF.idx  GLSL.ext.NV.h.3008A17D34447159.idx  GLSL.std.450.h.97E6B7224E3D17D7.idx  GlslangToSpv.cpp.1A168EA0FF1FE601.idx  GlslangToSpv.h.EAB4D712D3A65163.idx  InReadableOrder.cpp.7A7B2AAA336B9DA7.idx  InfoSink.cpp.3464CC9A77F405C4.idx  InfoSink.h.715FB54F6AEDBCE0.idx  Initialize.cpp.A2E7CD6F179F0646.idx  Initialize.h.7F44F749158329E5.idx  InitializeDll.cpp.7CD04349163422A2.idx  InitializeDll.h.AB55E267BCC1D9DF.idx  InitializeGlobals.h.5E28756696321523.idx  IntermTraverse.cpp.07ECCD2958A2202C.idx  Intermediate.cpp.6DA386068ECB9D52.idx  Link.cpp.C04EFADC4C13C8C8.idx  LiveTraverser.h.EC15CC95D87A5AA0.idx  Logger.cpp.855EBB6F913CE5D9.idx  Logger.h.3BE64C13D214531B.idx  NonSemanticDebugPrintf.h.0D946D915EE60E7A.idx  ParseContextBase.cpp.9924ED480C6E75CA.idx  ParseHelper.cpp.AC559C5CA138307D.idx  ParseHelper.h.340AAACBD8B1F995.idx  PoolAlloc.cpp.2EFDA7DB8648F642.idx  PoolAlloc.h.490299C2B733FD79.idx  Pp.cpp.67EE0A969EC8F727.idx  PpAtom.cpp.C874C9482731F101.idx  PpContext.cpp.859629C7F100E1E3.idx  PpContext.h.3F35301CCBA17D5B.idx  PpScanner.cpp.140D310DF70504E6.idx  PpTokens.cpp.9D5384B4B97A70A1.idx  (+497 more)
Docs/: CodeGuidelines.md
Engine/Source/Asset_Manager/: asset_builder.cpp  asset_loader.cpp  material_asset.cpp  texture_asset.cpp
Engine/Source/Asset_Manager/Include/: asset_builder.h  material_asset.h  texture_asset.h
Engine/Source/Asset_builder/: asset_builder.cpp
Engine/Source/Asset_loader/: asset_loader.cpp  texture_asset.cpp
Engine/Source/Asset_loader/Include/: asset_loader.h  texture_asset.h
Engine/Source/Asset_manager/: asset_builder.cpp  texture_asset.cpp
Engine/Source/Asset_manager/Include/: asset_loader.h
Engine/Source/Camera/: camera.cpp
Engine/Source/Camera/Include/: camera.h
Engine/Source/ECS/Include/: ComponentArray.h  ComponentManager.h  Coordinator.h  EntityManager.h  System.h  Types.h
Engine/Source/ECS/System/: TestSystem.cpp
Engine/Source/Editor/: EditorWindow.cpp  GameViewport.cpp  Imgui_layer.cpp  MaterialProperties.cpp  editorLayer.cpp  editor_layer.cpp  light_adder.cpp  material_editor.cpp  menuBar.cpp  menu_bar.cpp  meshAdder.cpp  mesh_adder.cpp  properties_panel.cpp  scene_graph.cpp  stats.cpp
Engine/Source/Editor/Include/: EditorWindow.h  GameViewport.h  Imgui_layer.h  MaterialProperties.h  editor_layer.h  light_adder.h  material_editor.h  menu_bar.h  meshAdder.h  properties_panel.h  scene_graph.h  stats.h
Engine/Source/IO/: project_manager.cpp
Engine/Source/Logger/: Logger.cpp
Engine/Source/Main/: Core.cpp  core.cpp  main.cpp
Engine/Source/Renderer/: camera.cpp  materialManager.cpp  mesh.cpp  renderer.cpp  renderobject.cpp  texture.cpp
Engine/Source/RendererCore/: material_core.cpp  mesh_core.cpp  renderer_core.cpp
Engine/Source/SceneManager/: entity.cpp  scene.cpp  scene_manager.cpp
Engine/Source/Vulkan/: vk_device.cpp  vk_engine.cpp  vk_functions.cpp  vk_init.cpp  vk_mesh.cpp  vk_offscreen.cpp  vk_renderer.cpp  vk_swapchain.cpp  vk_utils.cpp
Engine/Source/Window/: WindowHandler.cpp  window_handler.cpp
Engine/Test/: CMakeLists.txt  ExampleTest.cpp  Makefile  TestMain.cpp  cmake_install.cmake
EngineAssets/DamagedHelmet/.svn/: wc.db
EngineAssets/Shaders/: Contrast.frag  PBRFunctions.glsl  debug.frag  debug.vert  debugQuad.frag  debugQuad.vert  defaultTexturedWorld.frag  defaultWorld.frag  defaultWorld.vert  depthpass.frag  depthpass.vert  pbr_vert.vert  skybox.frag  skybox.vert  skybox_frag.frag  test.glsl  triangleShader.frag
docs/: CodeGuidelines.md
engine/Source/Editor/: GameViewport.cpp  Imgui_layer.cpp
engine/Source/Logger/: logger.cpp
engine/Source/Main/: core.cpp
engine/Source/RendererCore/: renderer_core.cpp
(+121 files in other folders)
